# ttstt

./: .gitignore  Cargo.toml  README.md  metadata.json
implementation-docs/: IMPLEMENTATION_PLAN.md  instructions.md
pkg/: manifest.json
resources/: README.md
resources/example-apps/file-explorer/: Cargo.toml
resources/example-apps/file-explorer/explorer/: Cargo.toml
resources/example-apps/file-explorer/explorer/src/: lib.rs
resources/example-apps/file-explorer/ui/src/components/ContextMenu/: ContextMenu.tsx
resources/example-apps/file-explorer/ui/src/components/FileExplorer/: FileExplorer.tsx  FileItem.tsx  FileList.tsx
resources/example-apps/file-explorer/ui/src/components/ShareDialog/: ShareDialog.tsx
resources/example-apps/file-explorer/ui/src/store/: fileExplorer.ts
resources/example-apps/file-explorer/ui/src/types/: caller-utils.d.ts
resources/guides/: 00-QUICK-REFERENCE.md  01-COMMON-PATTERNS.md  02-TROUBLESHOOTING.md  03-WIT-TYPES-DATA-MODELING.md  04-P2P-PATTERNS.md  05-UI-FRONTEND-GUIDE.md  06-TESTING-DEBUGGING.md  07-COMPLETE-EXAMPLES.md  08-MANIFEST-AND-DEPLOYMENT.md  09-CAPABILITIES-GUIDE.md  10-SQLITE-API-GUIDE.md  11-REALTIME-COMMUNICATION-PATTERNS.md  CHANGES_MADE.md  README.md
ttstt/: Cargo.toml
ttstt/src/: icon  lib.rs
ui/: index.html  package-lock.json  package.json  tsconfig.json
ui/src/: App.tsx  index.css
ui/src/components/: ApiKeysPage.tsx  SettingsPage.tsx  TestPage.tsx
ui/src/store/: ttstt.ts
ui/src/types/: caller-utils.d.ts  global.ts  ttstt.ts
ui/src/utils/: api.ts
(+1 files in other folders)
