[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.21"
process_macros = "0.1"
serde_json = "1.0"
wit-bindgen = "0.42.1"

[dependencies.chrono]
features = ["serde"]
version = "0.4"

[dependencies.hyperprocess_macro]
git = "https://github.com/hyperware-ai/hyperprocess-macro"
rev = "66884c0"

[dependencies.hyperware-openai-stt]
path = "../../hyperware-openai-ttstt/hyperware-openai-stt"

[dependencies.hyperware-openai-tts]
path = "../../hyperware-openai-ttstt/hyperware-openai-tts"

[dependencies.hyperware_process_lib]
features = ["hyperapp"]
git = "https://github.com/hyperware-ai/process_lib"
rev = "0e1aacc"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.ttstt_caller_utils]
optional = true
path = "../target/ttstt-caller-utils"

[dependencies.uuid]
features = [
    "v4",
    "serde",
]
version = "1.0"

[features]
caller-utils = ["ttstt_caller_utils"]
simulation-mode = []

[lib]
crate-type = ["cdylib"]

[package]
edition = "2021"
name = "ttstt"
version = "0.1.0"

[package.metadata.component]
package = "hyperware:process"
